finished styling sidebar, also added bg color to main + shadows. fixed overlap thru zindex

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
   min-height: 100vh;
   display: flex;
 }
+
 /*  FOR FONTS */
 @font-face {
   font-family: "redwing";
@@ -28,13 +29,51 @@ body {
 .side-bar {
   background-image: url(assets/manila-pic.jpg);
   background-size: cover;
-  box-shadow: 0 0 20px rgb(0, 0, 0);
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.905);
+  z-index: 1;
 
   width: 35vw;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
+.photo-credit {
+  margin: 0 0 5vh 0;
+  font-size: 1.2rem;
+  background-color: rgba(255, 255, 255, 0.608);
+}
+
+.logo-container {
+  text-align: center;
+
+  width: 100%;
+  height: 15vh;
+  margin: 16vh 0 0 0;
+}
+.logo-container > img {
+  width: 8.5rem;
+}
+
+.logo-container p {
+  background-color: rgba(255, 255, 255, 0.881);
+  border-radius: 2px;
+  width: fit-content;
+  margin: auto auto;
+  padding: 0.5rem;
+  font-size: 2.5rem;
+
+  font-family: "redwing";
+  font-weight: bold;
+}
 /* FOR MAIN CONTENT  */
 
 .main-content {
+  background-color: #bb997f;
+
   padding-left: 4vw;
+
+  width: 65vw;
 }
